--- a/index.css
+++ b/index.css
@@ -308,3 +308,34 @@ img.cross_icon {
     right: 4%;
     top: 0.5%;
 }
+.dark-theme {
+    background-color: #333;
+    color: #fff;
+  }
+  
+  .light-theme {
+    background-color: #fff;
+    color: #000;
+  }
+  .recipe-right {
+    position: relative;
+}
+.add-btn {
+    position: absolute;
+    bottom: 0%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: 1px solid gray;
+    padding: 5px 12px;
+    border-radius: 5px;
+    background: black;
+    color: white;
+    width: 60px;
+    display: fe;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 24px;
+    font-size: 20px;
+    cursor: pointer;
+}
